# learning-sycl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: drivers.hpp  kernels.hpp  utils.hpp
src/: main.cpp  utils.cpp
